<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/cv_training_detail">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:src="@drawable/ic_menu_gallery"
                android:id="@+id/iv_image_training_detail"
                android:scaleType="fitXY"
                android:contentDescription="@string/image" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:text="@string/nama_training"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:id="@+id/tv_nama_training_detail"
                    android:background="@android:color/holo_blue_light" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/tipe_training"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tipe_training"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_tipe_training_detail" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/kuota_training"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/kuota_training"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_kuota_training_detail" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/harga_training"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/harga_training"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_harga_training_detail" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/tanggal_training"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/tanggal_training"
                            android:textColor="@android:color/holo_red_dark"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_tanggal_training_detail" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent"
                        android:layout_marginBottom="8dp">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/status_training"
                            android:textColor="@android:color/black"
                            android:textSize="12sp"
                            android:layout_weight="1" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/status_training"
                            android:textStyle="bold"
                            android:textColor="@android:color/holo_blue_dark"
                            android:scrollbarSize="15dp"
                            android:textSize="12sp"
                            android:layout_weight="1"
                            android:id="@+id/tv_status_training_detail" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/container_aktifkan">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_delete_training_detail"
                    android:text="@string/delete"
                    android:background="@android:color/holo_red_light"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>